--- a/.github/workflows/buildtest.yaml
+++ b/.github/workflows/buildtest.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-test:
-    name: Install, Build and Test
+    name: Build and Start Check
     runs-on: ubuntu-latest
 
     steps:
@@ -23,31 +23,34 @@ jobs:
           go-version: '1.22'
           cache-dependency-path: go.mod
 
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
       - name: Download dependencies
         run: go mod download
-
-      - name: Run Go Tests
-        run: go test -v -race -coverprofile=coverage.out ./...
 
       - name: Build Go Application
         run: go build -v -o ./app ./cmd/gateway
 
-      - name: Upload Test Coverage
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: api-gateway-coverage
-          path: coverage.out
+      - name: Verify config.yaml exists
+        run: |
+          if [ ! -f config.yaml ]; then
+            echo "Error: config.yaml not found!"
+            exit 1
+          fi
+          echo "✓ config.yaml found"
+
+      - name: Start Gateway (smoke test)
+        run: |
+          echo "Starting API Gateway with config.yaml..."
+          timeout 5s ./app || code=$?
+          if [ ${code:-0} -eq 124 ]; then
+            echo "✓ Gateway started successfully (terminated after 5s)"
+            exit 0
+          elif [ ${code:-0} -eq 0 ]; then
+            echo "✓ Gateway started and stopped cleanly"
+            exit 0
+          else
+            echo "✗ Gateway failed to start (exit code: ${code})"
+            exit 1
+          fi
 
       - name: Upload Build Artifact
         if: success()
