--- a/config.yaml
+++ b/config.yaml
@@ -10,67 +10,67 @@ services:
   - name: "auth"
     path_prefix: "/api/v1/auth/"
     target_url: "http://localhost:8081"
-    strip_prefix: "/api/v1/auth"
+    strip_prefix: "/api/v1"
     auth_required: false # Login/Register must be public
 
   - name: "users"
     path_prefix: "/api/v1/users/"
     target_url: "http://localhost:8081" # Also points to the auth service
-    strip_prefix: "/api/v1/users"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   # --- Vehicle Service (Port 8082) ---
   - name: "vehicles"
     path_prefix: "/api/v1/vehicles/"
     target_url: "http://localhost:8082"
-    strip_prefix: "/api/v1/vehicles"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   # --- Appointment & Scheduling Service (Port 8083) ---
   - name: "appointments"
     path_prefix: "/api/v1/appointments/"
     target_url: "http://localhost:8083"
-    strip_prefix: "/api/v1/appointments"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   # --- Service & Project Management Service (Port 8084) ---
   - name: "services"
     path_prefix: "/api/v1/services/"
     target_url: "http://localhost:8084"
-    strip_prefix: "/api/v1/services"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   - name: "projects"
     path_prefix: "/api/v1/projects/"
     target_url: "http://localhost:8084" # Also points to the project service
-    strip_prefix: "/api/v1/projects"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   # --- Time Logging Service (Port 8085) ---
   - name: "time-logs"
     path_prefix: "/api/v1/time-logs/"
     target_url: "http://localhost:8085"
-    strip_prefix: "/api/v1/time-logs"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   # --- Payment & Billing Service (Port 8086) ---
   - name: "payments"
     path_prefix: "/api/v1/payments/"
     target_url: "http://localhost:8086"
-    strip_prefix: "/api/v1/payments"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   - name: "invoices"
     path_prefix: "/api/v1/invoices/"
     target_url: "http://localhost:8086" # Also points to the payment service
-    strip_prefix: "/api/v1/invoices"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   # --- Admin & Reporting Service (Port 8087) ---
   - name: "admin"
     path_prefix: "/api/v1/admin/"
     target_url: "http://localhost:8087"
-    strip_prefix: "/api/v1/admin"
+    strip_prefix: "/api/v1"
     auth_required: true
 
   # --- Bonus Features (For Later Implementation) ---
@@ -83,5 +83,5 @@ services:
   - name: "ai"
     path_prefix: "/api/v1/ai/"
     target_url: "http://localhost:8089" # Assuming a future port for the FastAPI service
-    strip_prefix: "/api/v1/ai"
+    strip_prefix: "/api/v1"
     auth_required: true
