chore: Add bin/ to .gitignore to exclude build artifacts from version control

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,7 @@ Thumbs.db
 # JetBrains
 workspace.xml
 
+# Build Artefacts
+bin/
+
 # Keep go.mod and source files tracked (do not ignore go.mod/go.sum)
