--- a/config.yaml
+++ b/config.yaml
@@ -116,6 +116,6 @@ services:
   - name: "ai"
     path_prefix: "/api/v1/ai/"
     target_url: "http://localhost:8091" # Agent Bot service (Python FastAPI)
-    strip_prefix: "" # Don't strip - Agent Bot expects the full path
+    strip_prefix: "/api/v1/ai" # Strip to match Agent Bot's internal routing
     auth_required: true
     env_var: "AGENT_BOT_SERVICE_URL"
